correction + changement couleur meilleur contrast

--- a/styles/components/_recherches.scss
+++ b/styles/components/_recherches.scss
@@ -1,13 +1,9 @@
 .recherches{
-    &__img{
-        height: 100px;
-        width: auto;
-    }
     &__logo{
         height: 100px;
         width: auto;
     }
-    img{
-        width: 100px;
+    h3{
+        color: $c-dyna;
     }
 }
