--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -2,7 +2,7 @@ $c-bg: #ececec;
 $c-alt: #750D37;
 $c-hover: #a01d51;
 $c-text: #252525;
-$c-dyna: #2d4041;
+$c-dyna: #476061;
 
 $size-title-h1: 76px;
 $size-title-h2: 32px;
